# idk

./: .gitignore  Dockerfile  backend.py  database.py  list.py  main.py  models.py  pyproject.toml  requirements.txt  tasks.db
backend/: __init__.py  backend.py
backend/core/: config.py  database.py  security.py
backend/models/: __init__.py  reminder.py  task.py  user.py
backend/routers/: admin.py  auth.py  tasks.py
backend/schemas/: reminder.py  task.py  user.py
backend/tests/: conftest.py  test_api.py
backend/utils/: auth.py
frontend/static/css/: style.css
frontend/static/js/: api.js  auth.js  main.js  tasks.js  utils.js
frontend/templates/: admin.html  index.html  login.html  register.html  task.html
static/css/: style.css
static/js/: script.js
templates/: index.html  task.html
todo_list.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
